test/invalid-semantics/58248_comparison_chain/comparison_chain.mag
-- Author: 58248, Afonso Topa 
-- The language doesn't support chaining comparison binary operators
-- like <, >, <= and >=

fun compute_within_range(n) : Int -> Int =
    if 0 < n < 10000 then n * 2 else 0
